dblue stores initial commit  On branch develop 	new file:   dblue_stores/__init__.py 	renamed:    polystores/clients/__init__.py -> dblue_stores/clients/__init__.py 	renamed:    polystores/clients/aws_client.py -> dblue_stores/clients/aws_client.py 	renamed:    polystores/clients/azure_client.py -> dblue_stores/clients/azure_client.py 	renamed:    polystores/clients/gc_client.py -> dblue_stores/clients/gc_client.py 	renamed:    polystores/exceptions.py -> dblue_stores/exceptions.py 	renamed:    polystores/logger.py -> dblue_stores/logger.py 	new file:   dblue_stores/settings.py 	renamed:    polystores/stores/__init__.py -> dblue_stores/stores/__init__.py 	renamed:    polystores/stores/azure_store.py -> dblue_stores/stores/azure_store.py 	renamed:    polystores/stores/base_store.py -> dblue_stores/stores/base_store.py 	renamed:    polystores/stores/gcs_store.py -> dblue_stores/stores/gcs_store.py 	renamed:    polystores/stores/local_store.py -> dblue_stores/stores/local_store.py 	renamed:    polystores/stores/manager.py -> dblue_stores/stores/manager.py 	renamed:    polystores/stores/s3_store.py -> dblue_stores/stores/s3_store.py 	renamed:    polystores/utils.py -> dblue_stores/utils.py 	deleted:    polystores/__init__.py 	deleted:    polystores/settings.py 	modified:   requirements/requirements-base.txt 	modified:   setup.cfg 	modified:   setup.py 	modified:   tests/test_clients/test_aws_client.py 	modified:   tests/test_clients/test_azure_client.py 	modified:   tests/test_clients/test_gc_client.py 	modified:   tests/test_clients/test_utils.py 	modified:   tests/test_stores/test_azure_store.py 	modified:   tests/test_stores/test_gcs_store.py 	modified:   tests/test_stores/test_s3_store.py 	modified:   tests/test_stores/test_utils.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@ lines_between_types = 1
 order_by_type = true
 known_future_library = future,pies
 known_standard_library = httpretty,faker,numpy,pandas,six,requests,websocket,jinja2,yaml,pytz,rhea,google,botocore,azure
-known_third_party = polyaxon_client,polyaxon_schemas,google,botocore,azure
-known_first_party = polystores
+known_third_party = google,botocore,azure
+known_first_party = dblue_stores
 indent = '    '
 multi_line_output = 3
 known_django = django
