refactor  On branch develop 	modified:   .prospector.yaml 	modified:   dblue_stores/stores/azure.py 	modified:   dblue_stores/stores/gcs.py 	modified:   dblue_stores/stores/s3.py 	modified:   dblue_stores/utils.py 	modified:   requirements/requirements-base.txt 	new file:   requirements/requirements-dev.txt 	deleted:    requirements/requirements-test.txt 	modified:   setup.cfg 	modified:   setup.py

--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -4,7 +4,7 @@ strictness: high
 test-warnings: true
 doc-warnings: true
 
-max-line-length: 100
+max-line-length: 120
 
 
 ignore-patterns:
@@ -19,6 +19,7 @@ mccabe:
 
 pylint:
   disable:
+    - astroid-error
     - abstract-method
     - broad-except
     - cyclic-import
@@ -37,3 +38,4 @@ pylint:
     - missing-final-newline
   options:
     ignore: migrations
+    max-line-length: 120
