--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ line_length = 100
 lines_between_types = 1
 order_by_type = true
 known_future_library = future,pies
-known_standard_library = httpretty,faker,numpy,pandas,six,requests,websocket,jinja2,yaml,pytz,rhea,google,botocore,azure
+known_standard_library = httpretty,faker,numpy,pandas,six,requests,websocket,jinja2,yaml,pytz,google,botocore,azure
 known_third_party = google,botocore,azure
 known_first_party = dblue_stores
 indent = '    '
